k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: djassa-api
  namespace: djassa
spec:
  selector:
    app: djassa-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
